# rag-eval-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: graphrag.json  naive.json  naive_vs_graphrag.json
examples/: quick_demo.py
graphrag_demo/: main.py
graphrag_demo/evals/: create_basic_rag.ipynb  create_eval_dataset.ipynb  create_eval_dataset.py  dspy_basic.ipynb  graphrag_quicktest.py  init_graphrag_standalone.py  quicktest_graphrag.py  rag_eval_reference.ipynb  rag_evaluation.ipynb  rag_helpers.py  run_rag_evals.ipynb  run_rag_evals.py
graphrag_demo/graph_rag/: ingestion.py  retrieve.py
graphrag_demo/rag_evals/: README.md  rag_results.json  requirements.txt
graphrag_demo/rag_evals/eval_dataset_builder/: __init__.py  config_example.json  create_eval_dataset.py  critique.py  dataset_manager.py  example_usage.py  generator.py  utils.py
graphrag_demo/rag_evals/rag_evaluator/: __init__.py  evaluator.py  example_configs.json  example_usage.py  new_run_evaluation.py  new_runner.py  run_evaluation.py  runner.py  usage_script.py
graphrag_demo/rag_evals/rag_system/: __init__.py  base.py  batch_processor.py  config.py  dataset.py  document_processor.py  example_usage.py  graphrag.py  init_graphrag_standalone.py  naive.py  new_standalone.py  prompts.py  rag.py  run_graphrag.py  run_naive_rag.py
rag_eval_toolkit/: README.md
rag_eval_toolkit/examples/: compare_architectures.py  quick_demo.py
rag_eval_toolkit/src/rag_eval/: __init__.py  cli.py
rag_eval_toolkit/src/rag_eval/dataset/: __init__.py  corpus.py  eval_dataset.py
rag_eval_toolkit/src/rag_eval/evaluator/: __init__.py  metrics.py  runner.py
rag_eval_toolkit/src/rag_eval/reporting/: __init__.py
src/rag_eval/: __init__.py  cli.py
src/rag_eval/dataset/: adapter.py  builder.py  critique.py
src/rag_eval/evaluator/: __init__.py  metrics.py  results.py  runner.py  tracking.py
src/rag_eval/reporting/: console.py  json_export.py
src/rag_eval/systems/: config.py  prompts.py  response.py
(+7 files in other folders)
